tests/compile-fail/default_sum_type.ori
// Spec: 07-properties-of-types.md § Default Trait — Derivation
// Sum types cannot derive Default (ambiguous variant)

#[derive(Default)]
type Status = Pending | Running | Done;

#[compile_fail("cannot derive `Default` for sum type")]
@test_default_sum_type () -> void = {
    let _ = Status.default();
    ()
}
